--- a/work-then-travel-web/package.json
+++ b/work-then-travel-web/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "@mui/x-charts": "^7.5.0",
     "formik": "^2.4.6",
     "mui-image": "^1.0.7",
     "react": "^18.2.0",
