--- a/work-then-travel-web/package.json
+++ b/work-then-travel-web/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/x-charts": "^7.5.0",
+    "dayjs": "^1.11.11",
     "formik": "^2.4.6",
     "mui-image": "^1.0.7",
     "react": "^18.2.0",
